--- a/client/styles.css
+++ b/client/styles.css
@@ -26,6 +26,15 @@
 tr {
   text-align: center;
 }
+tr:hover {background-color: #f5f5f5;}
+/* tr:nth-child(even) {background-color: #f2f2f2;} */
+
 th {
   text-align: inherit;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  margin: 1em;
 }
